--- a/config.yaml
+++ b/config.yaml
@@ -1,3 +1,7 @@
+title: Olga Suslova
+name: Underwater world
+description: Oil and watercolor paintings by Olga Suslova
+view_collection: View Collection
 galleries:
   - name: Deep Blue
   - name: Watercolor
