Main header image

--- a/config.yaml
+++ b/config.yaml
@@ -1,7 +1,7 @@
 title: Olga Suslova
 name: Underwater world
 description: Oil and watercolor paintings by Olga Suslova
-view_collection: View Collection
+view_collection: Scroll Down
 galleries:
   - name: Deep Blue
     image: deep-blue.jpg
