--- a/config.yaml
+++ b/config.yaml
@@ -20,6 +20,7 @@ links:
 shop:
   prints: Prints
   originals: Originals
+copyright: Copyright Olga Suslova &copy; 2016. All Rights Reserved.
 galleries:
   - name: Deep Blue
     image: deep-blue.jpg
