Link to Etsy from the header

--- a/config.yaml
+++ b/config.yaml
@@ -18,6 +18,7 @@ links:
   facebook: https://www.facebook.com/olga.suslova.1
   etsy: https://www.etsy.com/
 shop:
+  buy_prints: Buy Prints
   prints: Prints
   originals: Originals
 copyright: Copyright Olga Suslova &copy; 2016. All Rights Reserved.
