Remove 'made with love'

--- a/config.yaml
+++ b/config.yaml
@@ -5,7 +5,7 @@ view_collection: Scroll Down
 copyright: Copyright Olga Suslova &copy; 2016. All Rights Reserved.
 
 about:
-    title: Made with love
+    title: Olga Suslova
     description: "What I try to express through my painting is a sense of harmony
                  in the nature, the magic that is hidden even in the smallest things.
                  I agree with Andrew Wyeth when he says: <cite>&ldquo;One's art goes
