Changle text on the front page

--- a/config.yaml
+++ b/config.yaml
@@ -6,17 +6,20 @@ copyright: Copyright Olga Suslova &copy; 2016. All Rights Reserved.
 
 about:
     title: Olga Suslova
-    description: "What I try to express through my painting is a sense of harmony
-                 in the nature, the magic that is hidden even in the smallest things.
-                 I agree with Andrew Wyeth when he says: <cite>&ldquo;One's art goes
-                 as far and as deep as one's love goes&rdquo;</cite>."
+    description: Marine life and а wild life artist, a member of the
+                 Ocean Artists Society.
 
 footer:
     about: About Me
-    description: I am an artist based in Tel Aviv, Israel. I received my education
+    description: >
+                 I am an artist based in Tel Aviv, Israel. I received my education
                  at Arts Academy of St. Petersburg, Russia. In the beginning of my
                  career I worked as a stage designer but now I dedicate all my time
                  to painting. I enjoy my working time, it's the best time for me.
+                 What I try to express through my painting is a sense of harmony in
+                 the nature, the magic that is hidden even in the smallest things.
+                 I agree with Andrew Wyeth when he says: "One's art goes as far
+                 and as deep as one's love goes".
 
 links:
   facebook: https://www.facebook.com/olga.suslova.1
