--- a/config.yaml
+++ b/config.yaml
@@ -6,7 +6,7 @@ copyright: Copyright Olga Suslova &copy; 2016. All Rights Reserved.
 
 about:
     title: Olga Suslova
-    description: Marine life and а wild life artist, a member of the
+    description: Marine life and wild life artist, a member of the
                  Ocean Artists Society.
 
 footer:
