--- a/config.yaml
+++ b/config.yaml
@@ -23,7 +23,8 @@ footer:
 
 links:
   facebook: https://www.facebook.com/olga.suslova.1
-  etsy: https://www.etsy.com/
+  oas: http://www.oceanartistssociety.org
+  etsy: https://www.etsy.com
 
 shop:
   buy_prints: Buy Prints
