--- a/config.yaml
+++ b/config.yaml
@@ -24,12 +24,13 @@ footer:
 links:
   facebook: https://www.facebook.com/olga.suslova.1
   oas: http://www.oceanartistssociety.org
-  etsy: https://www.etsy.com
 
 shop:
   buy_prints: Buy Prints
   prints: Prints
   originals: Originals
+  prints_link: https://society6.com/olgasoo
+  originals_link: mailto:olgasoo@gmail.com
 
 galleries:
   - name: Deep Blue
