--- a/config.yaml
+++ b/config.yaml
@@ -40,39 +40,51 @@ galleries:
     items:
     - name: Queen of the Reef
       image: 01-queen-of-the-reef.jpg
+      original_image: 01-queen-of-the-reef-original.jpg
       description: oil on canvas 100x80
     - name: Red Corals for the Queen
       image: 02-triptych-baroque---red-corals-for-the-queen.jpg
+      original_image: 02-triptych-baroque---red-corals-for-the-queen-original.jpg
       description: oil on canvas 100x80
     - name: Guards
       image: 03-triptych-baroque---guards.jpg
+      original_image: 03-triptych-baroque---guards-original.jpg
       description: oil on canvas 100x80
     - name: King and His Treasures
       image: 04-triptych-baroque---king-and-his-treasures.jpg
+      original_image: 04-triptych-baroque---king-and-his-treasures-original.jpg
       description: oil on canvas 100x80
     - name: Triptych BAROQUE
       image: 05-triptych-baroque.jpg
+      original_image: 05-triptych-baroque-original.jpg
       description: oil on canvas 100x80 cm x 3
     - name: Morning on the Coral Reef
       image: 06-morning-on-the-coral-reef.jpg
+      original_image: 06-morning-on-the-coral-reef-original.jpg
       description: oil on canvas 130x80 cm
     - name: Coral Reef
       image: 07-coral-reef.jpg
+      original_image: 07-coral-reef-original.jpg
       description: oil on canvas 80x70 cm
     - name: Coral Reef
       image: 08-coral-reef.jpg
+      original_image: 08-coral-reef-original.jpg
       description: oil on canvas 80x80 cm
     - name: Caw Fish
       image: 09-caw-fish.jpg
+      original_image: 09-caw-fish-original.jpg
       description: oil on canvas 80x80 cm
     - name: Sunset in the Coral Garden
       image: 10-sunset-in-the-coral-garden.jpg
+      original_image: 10-sunset-in-the-coral-garden-original.jpg
       description: oil on canvas 100x100 cm
     - name: Coral Reef Baroque
       image: 11-coral-reef-baroque.jpg
+      original_image: 11-coral-reef-baroque-original.jpg
       description: oil on canvas 80x70 cm
     - name: Blue Ringed Octopus
       image: 12-blue-ringed-octopus.jpg
+      original_image: 12-blue-ringed-octopus-original.jpg
       description: oil on canvas 45x45 cm
 
   - name: Sea Shore
@@ -82,51 +94,67 @@ galleries:
     items:
     - name: Eilat , Detail
       image: 01-eilat-,-detail.jpg
+      original_image: 01-eilat-,-detail-original.jpg
       description: watercolor on paper 50x70 cm
     - name: Herzliya
       image: 02-herzliya.jpg
+      original_image: 02-herzliya-original.jpg
       description: watercolor on paper 50x70 cm
     - name: Eilat
       image: 03-eilat.jpg
+      original_image: 03-eilat-original.jpg
       description: watercolor on paper 50x70 cm
     - name: Eilat
       image: 04-eilat.jpg
+      original_image: 04-eilat-original.jpg
       description: watercolor on paper 50x70 cm
     - name: Venece
       image: 05-venece.jpg
+      original_image: 05-venece-original.jpg
       description: watercolor on paper 50x70 cm
     - name: Shells on Sand
       image: 06-shells-on-sand.jpg
+      original_image: 06-shells-on-sand-original.jpg
       description: watercolour on paper 35x50 cm
     - name: Shells on the Sand
       image: 07-shells-on-the-sand.jpg
+      original_image: 07-shells-on-the-sand-original.jpg
       description: watercolour on paper 35x50 cm
     - name: Dead Sea
       image: 08-dead-sea.jpg
+      original_image: 08-dead-sea-original.jpg
       description: watercolor on paper 50x70 cm
     - name: Kineret
       image: 09-kineret.jpg
+      original_image: 09-kineret-original.jpg
       description: watercolor on paper 50x70 cm
     - name: Broken Shells, Bulgaria
       image: 10-broken-shells-of-the-black-sea,-bulgaria.jpg
+      original_image: 10-broken-shells-of-the-black-sea,-bulgaria-original.jpg
       description: watercolor on paper
     - name: Akko, Detail
       image: 11-akko,-detail.jpg
+      original_image: 11-akko,-detail-original.jpg
       description: watercolor on paper 50x70 cm
     - name: Spain
       image: 12-spain.jpg
+      original_image: 12-spain-original.jpg
       description: watercolor on paper 50x70 cm
     - name: Crete
       image: 13-crete.jpg
+      original_image: 13-crete-original.jpg
       description: watercolor on paper 50x70 cm
     - name: Australia
       image: 14-australia.jpg
+      original_image: 14-australia-original.jpg
       description: watercolor on paper 50x70 cm
     - name: Netania
       image: 15-netania.jpg
+      original_image: 15-netania-original.jpg
       description: watercolor on paper 50x70 cm
     - name: Crete
       image: 16-crete.jpg
+      original_image: 16-crete-original.jpg
       description: watercolour on paper 50x70 cm
 
   - name: Blue Day
@@ -136,30 +164,39 @@ galleries:
     items:
     - name: Blue Day
       image: 01-blue-day.jpg
+      original_image: 01-blue-day-original.jpg
       description: oil on canvas 80x80 cm
     - name: Five Stars
       image: 02-five-stars.jpg
+      original_image: 02-five-stars-original.jpg
       description: oil on canvas 100x100 cm
     - name: The Owner of Treasures
       image: 03-the-owner-of-treasures.jpg
+      original_image: 03-the-owner-of-treasures-original.jpg
       description: oil on canvas 60x60 cm
     - name: Lionfish
       image: 04-lionfish.jpg
+      original_image: 04-lionfish-original.jpg
       description: oil on canvas 60x50 cm
     - name: Crystal River
       image: 05-crystal-river.jpg
+      original_image: 05-crystal-river-original.jpg
       description: oil on canvas 80x60 cm
     - name: Coral Reef
       image: 06-coral-reef.jpg
+      original_image: 06-coral-reef-original.jpg
       description: oil on canvas 80x60 cm
     - name: Morning in Eilat
       image: 07-morning-in-eilat.jpg
+      original_image: 07-morning-in-eilat-original.jpg
       description: oil on canvas 80x150 cm
     - name: Sea Turtle
       image: 08-sea-turtle.jpg
+      original_image: 08-sea-turtle-original.jpg
       description: oil on canvas 80x80 cm
     - name: Infinity
       image: 09-infinity.jpg
+      original_image: 09-infinity-original.jpg
       description: oil on canvas 80x100 cm
     # - name: Mirrored Turtle
     #   image: 10-mirrored-turtle.jpg
@@ -172,39 +209,51 @@ galleries:
     items:
     - name: Desert Landscape
       image: 01-desert-landscape.jpg
+      original_image: 01-desert-landscape-original.jpg
       description: watercolor on paper 28x60 cm
     - name: Desert Landscape
       image: 02-desert-landscape.jpg
+      original_image: 02-desert-landscape-original.jpg
       description: watercolor on paper 23x50 cm
     - name: Desert Landscape
       image: 03-desert-landscape.jpg
+      original_image: 03-desert-landscape-original.jpg
       description: watercolor on paper 28x60 cm
     - name: Desert Landscape
       image: 04-desert-landscape.jpg
+      original_image: 04-desert-landscape-original.jpg
       description: watercolor on paper 28x60 cm
     - name: Desert Landscape
       image: 05-desert-landscape.jpg
+      original_image: 05-desert-landscape-original.jpg
       description: watercolor on paper 28x60 cm
     - name: Desert Landscape
       image: 06-desert-landscape.jpg
+      original_image: 06-desert-landscape-original.jpg
       description: watercolor on paper 23x50 cm
     - name: Desert Landscape
       image: 07-desert-landscape.jpg
+      original_image: 07-desert-landscape-original.jpg
       description: mixed media on cardboard 25х70 cm
     - name: Desert Landscape
       image: 08-desert-landscape.jpg
+      original_image: 08-desert-landscape-original.jpg
       description: mixed media on cardboard 25х70 cm
     - name: Desert Landscape
       image: 09-desert-landscape.jpg
+      original_image: 09-desert-landscape-original.jpg
       description: mixed media on cardboard 25х70 cm
     - name: Desert Landscape
       image: 10-desert-landscape.jpg
+      original_image: 10-desert-landscape-original.jpg
       description: mixed media on cardboard 25х70 cm
     - name: Desert Landscape
       image: 11-desert-landscape.jpg
+      original_image: 11-desert-landscape-original.jpg
       description: mixed media on cardboard 25х70 cm
     - name: Desert Landscape
       image: 12-desert-landscape.jpg
+      original_image: 12-desert-landscape-original.jpg
       description: mixed media on cardboard 25х70 cm
 
   - name: Deep Blue
@@ -214,48 +263,63 @@ galleries:
     items:
     - name: Beautiful Beast
       image: 01-beautiful-beast.jpg
+      original_image: 01-beautiful-beast-original.jpg
       description: oil on canvas 80x80
     - name: Deep Blue
       image: 02-deep-blue.jpg
+      original_image: 02-deep-blue-original.jpg
       description: oil on canvas 80x60 cms
     - name: Nocturne
       image: 03-nocturne.jpg
+      original_image: 03-nocturne-original.jpg
       description: oil on canvas 60x60 cms
     - name: Small Piece of the Sea
       image: 04-small-piece-of-the-sea.jpg
+      original_image: 04-small-piece-of-the-sea-original.jpg
       description: oil on canvas 60x60 cms
     - name: Newborn
       image: 05-newborn.jpg
+      original_image: 05-newborn-original.jpg
       description: oil on canvas 50x40 cm
     - name: Red Reef
       image: 06-red-reef.jpg
+      original_image: 06-red-reef-original.jpg
       description: oil on canvas 80x150 cm
     - name: To the Deep
       image: 07-to-the-deep.jpg
+      original_image: 07-to-the-deep-original.jpg
       description: oil on canvas 160x150 cm
     - name: Happy Cuttlefish
       image: 08-happy-cuttlefish.jpg
+      original_image: 08-happy-cuttlefish-original.jpg
       description: oil on canvas 60x60
     - name: The Big Fish
       image: 09-the-big-fish.jpg
+      original_image: 09-the-big-fish-original.jpg
       description: oil on canvas 100x100 cm
     - name: Green Reef
       image: 10-green-reef.jpg
+      original_image: 10-green-reef-original.jpg
       description: oil on canvas 80x80 cm
     - name: Big Parrot Fish
       image: 11-big-parrot-fish.jpg
+      original_image: 11-big-parrot-fish-original.jpg
       description: oil on canvas 80x100 cm
     - name: Turquoise Morning
       image: 12-turquoise-morning.jpg
+      original_image: 12-turquoise-morning-original.jpg
       description: oil on canvas 100x100 cm
     - name: Mirrored Turtle
       image: 13-mirrored-turtle.jpg
+      original_image: 13-mirrored-turtle-original.jpg
       description: oil on canvas 100x100 cm  x 2
     - name: Sunset Flight
       image: 14-sunset-flight.jpg
+      original_image: 14-sunset-flight-original.jpg
       description: oil on canvas 80x80 x 3
     - name: Blue Ringed Octopus
       image: 15-blue-ringed-octopus.jpg
+      original_image: 15-blue-ringed-octopus-original.jpg
       description: oil on canvas 50x40 cm
 
   - name: Close Up
@@ -265,48 +329,63 @@ galleries:
     items:
     - name: Close up
       image: 01-oil-on-canvas.jpg
+      original_image: 01-oil-on-canvas-original.jpg
       description: Oil on Canvas
     - name: Close up
       image: 02-oil-on-canvas.jpg
+      original_image: 02-oil-on-canvas-original.jpg
       description: Oil on Canvas
     - name: Close up
       image: 03-oil-on-canvas.jpg
+      original_image: 03-oil-on-canvas-original.jpg
       description: Oil on Canvas
     - name: Close up
       image: 04-oil-on-canvas.jpg
+      original_image: 04-oil-on-canvas-original.jpg
       description: Oil on Canvas
     - name: Close up
       image: 05-oil-on-canvas.jpg
+      original_image: 05-oil-on-canvas-original.jpg
       description: Oil on Canvas
     - name: Close up
       image: 06-oil-on-canvas.jpg
+      original_image: 06-oil-on-canvas-original.jpg
       description: Oil on Canvas
     - name: Close up
       image: 07-oil-on-canvas.jpg
+      original_image: 07-oil-on-canvas-original.jpg
       description: Oil on Canvas
     - name: Close up
       image: 08-oil-on-canvas.jpg
+      original_image: 08-oil-on-canvas-original.jpg
       description: Oil on Canvas
     - name: Close up
       image: 09-oil-on-canvas.jpg
+      original_image: 09-oil-on-canvas-original.jpg
       description: Oil on Canvas
     - name: Close up
       image: 10-oil-on-canvas.jpg
+      original_image: 10-oil-on-canvas-original.jpg
       description: Oil on Canvas
     - name: Close up
       image: 11-oil-on-canvas.jpg
+      original_image: 11-oil-on-canvas-original.jpg
       description: Oil on Canvas
     - name: Close up
       image: 12-oil-on-canvas.jpg
+      original_image: 12-oil-on-canvas-original.jpg
       description: Oil on Canvas
     - name: Close up
       image: 13-oil-on-canvas.jpg
+      original_image: 13-oil-on-canvas-original.jpg
       description: Oil on Canvas
     - name: Close up
       image: 14-oil-on-canvas.jpg
+      original_image: 14-oil-on-canvas-original.jpg
       description: Oil on Canvas
     - name: Close up
       image: 15-oil-on-canvas.jpg
+      original_image: 15-oil-on-canvas-original.jpg
       description: Oil on Canvas
 
   - name: Forest
@@ -316,21 +395,27 @@ galleries:
     items:
     - name: The Last Minute
       image: 01-the-last-minute.jpg
+      original_image: 01-the-last-minute-original.jpg
       description: oil on canvas 100x70 cm
     - name: Mimicry
       image: 02-mimicry.jpg
+      original_image: 02-mimicry-original.jpg
       description: oil on canvas 80x80 cm
     - name: Life in the Grass
       image: 03-life-in-the-grass.jpg
+      original_image: 03-life-in-the-grass-original.jpg
       description: oil on canvas 60x60 cm
     - name: Going Green
       image: 04-going-green.jpg
+      original_image: 04-going-green-original.jpg
       description: oil on canvas 60x60 cm
     - name: Enjoying the Sunset
       image: 05-enjoying-the-sunset.jpg
+      original_image: 05-enjoying-the-sunset-original.jpg
       description: oil on canvas 60x60 cm
     - name: Lizard Mona
       image: 06-lizard-mona.jpg
+      original_image: 06-lizard-mona-original.jpg
       description: oil on canvas 80x60 cm
 
   - name: Watercolor
@@ -340,66 +425,87 @@ galleries:
     items:
     - name: Sleeping Whales
       image: 01-sleeping-whales.jpg
+      original_image: 01-sleeping-whales-original.jpg
       description: watercolor on paper 85x60 cm
     - name: Gulf Stream
       image: 02-gulf-stream.jpg
+      original_image: 02-gulf-stream-original.jpg
       description: watercolor on paper 50x70 cm
     - name: Gulf Stream Series
       image: 03-gulf-stream-series.jpg
+      original_image: 03-gulf-stream-series-original.jpg
       description: watercolor on paper 65x80
     - name: Gulf Stream Series
       image: 04-gulf-stream-series.jpg
+      original_image: 04-gulf-stream-series-original.jpg
       description: watercolor on paper 65x80
     - name: Sea Turtle
       image: 05-sea-turtle.jpg
+      original_image: 05-sea-turtle-original.jpg
       description: watercolor on paper 60x60 cm
     - name: Sea Dragon
       image: 06-sea-dragon.jpg
+      original_image: 06-sea-dragon-original.jpg
       description: watercolor on paper
     - name: Melting Ice
       image: 07-melting-ice.jpg
+      original_image: 07-melting-ice-original.jpg
       description: watercolor on paper
     - name: Polar Sea
       image: 08-polar-sea.jpg
+      original_image: 08-polar-sea-original.jpg
       description: watercolor on paper
     - name: Melting Ice
       image: 09-melting-ice.jpg
+      original_image: 09-melting-ice-original.jpg
       description: watercolor on paper
     - name: Polar Sea
       image: 10-polar-sea.jpg
+      original_image: 10-polar-sea-original.jpg
       description: watercolor on paper
     - name: Mola Mola
       image: 11-mola-mola.jpg
+      original_image: 11-mola-mola-original.jpg
       description: watercolour on paper 50x35 cm
     - name: Happy Whale
       image: 12-happy-whale.jpg
+      original_image: 12-happy-whale-original.jpg
       description: watercolor on paper
     - name: Polar Sea
       image: 13-polar-sea.jpg
+      original_image: 13-polar-sea-original.jpg
       description: watercolor on paper
     - name: Polar Sea
       image: 14-polar-sea.jpg
+      original_image: 14-polar-sea-original.jpg
       description: watercolor on paper
     - name: Polar Sea
       image: 15-polar-sea.jpg
+      original_image: 15-polar-sea-original.jpg
       description: watercolor on paper
     - name: Hello!
       image: 16-hello!.jpg
+      original_image: 16-hello!-original.jpg
       description: watercolor on paper
     - name: Whales
       image: 17-whales.jpg
+      original_image: 17-whales-original.jpg
       description: watercolor on paper
     - name: Polar Sea
       image: 18-polar-sea.jpg
+      original_image: 18-polar-sea-original.jpg
       description: watercolor on paper
     - name: Polar Sea
       image: 19-polar-sea.jpg
+      original_image: 19-polar-sea-original.jpg
       description: watercolor on paper
     - name: Gulf Stream Series
       image: 20-gulf-stream-series.jpg
+      original_image: 20-gulf-stream-series-original.jpg
       description: watercolor on paper 70x50 cm
     - name: Polar Sea
       image: 21-polar-sea.jpg
+      original_image: 21-polar-sea-original.jpg
       description: watercolor on paper
 
   - name: Fossils
@@ -409,46 +515,61 @@ galleries:
     items:
     - name: Fossils
       image: 01-fossils.jpg
+      original_image: 01-fossils-original.jpg
       description: oil on canvas 80x80 cm
     - name: Red Rocks
       image: 02-red-rocks.jpg
+      original_image: 02-red-rocks-original.jpg
       description: oil on canvas 80x80 cms
     - name: Misty Morning
       image: 03-misty-morning.jpg
+      original_image: 03-misty-morning-original.jpg
       description: oil on canvas 80x80 cm
     - name: Big Ammonite
       image: 04-big-ammonite.jpg
+      original_image: 04-big-ammonite-original.jpg
       description: oil on canvas 80x80 cms
     - name: Shells and Butterflies
       image: 05-shells-and-butterflies.jpg
+      original_image: 05-shells-and-butterflies-original.jpg
       description: oil on canvas 80x80 cms
     - name: Sad Cuttlefish
       image: 06-sad-cuttlefish.jpg
+      original_image: 06-sad-cuttlefish-original.jpg
       description: oil on canvas 50x40 cm
     - name: Misty Lagoon
       image: 07-misty-lagoon.jpg
+      original_image: 07-misty-lagoon-original.jpg
       description: oil on canvas 80x60 cms
     - name: Atlantis
       image: 08-atlantis,-oil-on-canvas-140x110x2.jpg
+      original_image: 08-atlantis,-oil-on-canvas-140x110x2-original.jpg
       description: Oil on Canvas 140x110x2
     - name: Napoleon Fish
       image: 09-napoleon-fish.jpg
+      original_image: 09-napoleon-fish-original.jpg
       description: oil on canvas 50x60 cm
     - name: In the Cave
       image: 10-in-the-cave.jpg
+      original_image: 10-in-the-cave-original.jpg
       description: oil on canvas 80x80 cm
     - name: Zeus Faber
       image: 11-zeus-faber,-oil-on-canvas-60x60-cm.jpg
+      original_image: 11-zeus-faber,-oil-on-canvas-60x60-cm-original.jpg
       description: Oil on Canvas 60x60 Cm
     - name: Still Life With Shells
       image: 12-still-life-with-shells.jpg
+      original_image: 12-still-life-with-shells-original.jpg
       description: oil on canvas 60x60 cms
     - name: Stillife on White
       image: 13-stillife-on-white.jpg
+      original_image: 13-stillife-on-white-original.jpg
       description: Oil on canvas, 50x60 cm
     - name: Stillife on Black
       image: 14-stillife-on-black.jpg
+      original_image: 14-stillife-on-black-original.jpg
       description: oil on canvas 25x35 cm
     - name: Sea Collection
       image: 15-sea-collection.jpg
+      original_image: 15-sea-collection-original.jpg
       description: oil on canvas 80x60 cms
